--- a/public/javascript.html
+++ b/public/javascript.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="utf-8">
   <title>JS + HTML main</title>
-  <script src="scripts.js"></script> <!-- подклюсаем джаваскрипт фаил, теперь можем использовать код из него тут -->
+  <script src="scripts.js"></script> <!-- подключаем джаваскрипт фаил, теперь можем использовать код из него тут -->
+  <!-- <script src="/app.js"></script> --> <!-- подключение в Синатре -->
 </head>
 
 
 <body>
-  <div>
-    <a href="javascript2.html">To page2</a>
-  </div>
+  <div><a href="javascript2.html">To page2</a></div>
 
-  <!-- При нажатии простой кнопки весь код обрабатывается браузером, никаких запрпосов не происходит -->
+
+  <!-- При нажатии простой кнопки весь код обрабатывается браузером, никаких запросов не происходит -->
   <!-- Функции с одним именем размещенные на разных страницах никак не влияют друг на друга, тк обрабатываются каждая на своей странице. Разные страницы для браузера это как разные приложения независимые друг от друга -->
 
   <h4>Функция 1.1 записаная в теге script ниже</h4>
@@ -31,10 +31,33 @@
   <h4>Функция 1.3 c переменной x+=1</h4>
   <button onclick="perx()">Click me!</button>
 
+  <h4>1.4 alert() без функции, прямо в атрибуте</h4>
+  <!-- alert() можно писать прямо в атрибуте и оно будет вызывать сообщение -->
+  <button onclick="alert('Hello im alert in atribut')">Click me!</button>
+
 
   <h4>Функция 2.1 c localStorage</h4>
   <button onclick="localst()">Click me!</button>
 
 
+  <h4>Функция 3.1 c параметром</h4>
+  <!-- просто пишем или интегрируем(<%= %>) если необходимо параметр в скобках -->
+  <button onclick="addToCart(6)">Click me!</button> <!-- #=> You added pizza with id: 6 -->
+
+
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--  -->
