дополнение и перераспределение нумерации

--- a/public/javascript.html
+++ b/public/javascript.html
@@ -35,6 +35,10 @@
   <!-- alert() можно писать прямо в атрибуте и оно будет вызывать сообщение -->
   <button onclick="alert('Hello im alert in atribut')">Click me!</button>
 
+  <h4>1.5 Две строки кода в аргументе. return false</h4>
+  <!-- return false - отменит например отправку формы ?? -->
+  <button onclick="alert('Hello im alert in atribut');return false">Click me!</button>
+
 
   <h4>Функция 2.1 c localStorage</h4>
   <button onclick="localst()">Click me!</button>
